--- a/src/app/shared/components/navBar/navBar.component.html
+++ b/src/app/shared/components/navBar/navBar.component.html
@@ -13,7 +13,7 @@
                 <details>
                     <summary>{{userName}}</summary>
                     <ul class="bg-base-100 rounded-t-none p-2">
-                        <li><a>Account</a></li>
+                        <li><a routerLink="{{accountRoute}}">Account</a></li>
                         <li><a (click)="logout()">Logout</a></li>
                     </ul>
                 </details>
