--- a/src/app/candidates/pages/candidateAccount/candidateAccount.component.html
+++ b/src/app/candidates/pages/candidateAccount/candidateAccount.component.html
@@ -1,6 +1,6 @@
 <h2 class="text-xl text-center my-3">My account</h2>
 
-<form class="flex flex-col items-center" [formGroup]="voterForm" (ngSubmit)="onSubmit()">
+<form class="flex flex-col items-center" [formGroup]="candidateForm" (ngSubmit)="onSubmit()">
     <label class="input mb-2">
         <input formControlName="id_card" type="number" placeholder="ID Card" readonly />
     </label>
@@ -15,6 +15,11 @@
         <input formControlName="email" type="email" placeholder="email" />
     </label>
     <span class="text-red-500">{{getErrors("email")}}</span>
+
+    <label class="input mb-2">
+        <input formControlName="party" type="text" placeholder="party" />
+    </label>
+    <span class="text-red-500">{{getErrors("party")}}</span>
 
     <input type="submit" value="Save" class="btn btn-secondary" />
 </form>
