--- a/src/app/shared/components/navBar/navBar.component.html
+++ b/src/app/shared/components/navBar/navBar.component.html
@@ -1,28 +1,68 @@
 <div class="navbar bg-base-100 shadow-sm">
-    <div class="flex-1">
+    <div class="navbar-start">
+        <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                    stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+                </svg>
+            </div>
+            <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+                <li><a>Item 1</a></li>
+                <li>
+                    <a>Parent</a>
+                    <ul class="p-2">
+                        <li><a>Submenu 1</a></li>
+                        <li><a>Submenu 2</a></li>
+                    </ul>
+                </li>
+                <li><a>Item 3</a></li>
+            </ul>
+        </div>
         <a class="btn btn-ghost text-xl" routerLink="/">Online voting system</a>
     </div>
-    <div class="flex-none">
-        <ul class="menu menu-horizontal items-center px-1">
-
-            @if (status === "Authenticated") {
-
-            <div class="badge badge-secondary mr-1">{{ userType | titlecase}}</div>
-
-            <li>
+    <div class="navbar-center hidden lg:flex">
+        <ul class="menu menu-horizontal px-1">
+            <li><a routerLink="/candidates">Candidates</a></li>
+            <!-- <li>
                 <details>
-                    <summary>{{userName}}</summary>
-                    <ul class="bg-base-100 rounded-t-none p-2">
-                        <li><a routerLink="{{accountRoute}}">Account</a></li>
-                        <li><a (click)="logout()">Logout</a></li>
+                    <summary>Parent</summary>
+                    <ul class="p-2">
+                        <li><a>Submenu 1</a></li>
+                        <li><a>Submenu 2</a></li>
                     </ul>
                 </details>
-            </li>
+            </li> -->
+            @if (userType === "ADMIN") {
+            <li><a routerLink="/voters">Voters</a></li>
             }
-            @else {
-            <li><a routerLink="/auth/login">Login</a></li>
-            <li><a routerLink="/auth/register">Register</a></li>
+            @if (userType === "VOTER") {
+            <li><a routerLink="/make-your-vote">Vote</a></li>
             }
+            <li><a routerLink="/results">Results</a></li>
         </ul>
+    </div>
+    <div class="navbar-end">
+        <div class="flex-none">
+            <ul class="menu menu-horizontal items-center px-1">
+
+                <div class="badge mr-1"
+                    [ngClass]="userType === 'VOTER' ? 'badge-primary' : userType === 'CANDIDATE' ? 'badge-success' : 'badge-neutral'">
+                    {{ userType | titlecase}}</div>
+
+                <li>
+                    <details>
+                        <summary>{{userName}}</summary>
+                        <ul class="bg-base-100 rounded-t-none p-2">
+                            @if (userType !== "ADMIN") {
+                            <li><a routerLink="{{accountRoute}}">Account</a></li>
+                            }
+                            <li><a (click)="logout()">Logout</a></li>
+                        </ul>
+                    </details>
+                </li>
+
+            </ul>
+        </div>
     </div>
 </div>
